<resources>
    <string name="app_name">SanSor</string>
    <string name="action_settings">Settings</string>

    <string name="titulo_text">Titulo</string>
    <string name="title_label">Nombre:</string>
    <string name="id_detalle">Id:</string>
    <string name="id_detalle_valor">Id del sensor</string>
    <string name="temp_detalle">Temp:</string>
    <string name="temp_detalle_valor">Temp del sensor</string>
    <string name="noise_detalle">Ruido:</string>
    <string name="noise_detalle_valor">Ruido del sensor</string>
    <string name="light_detalle">Luminosidad:</string>
    <string name="light_detalle_valor">Luminosidad del sensor</string>
    <string name="todos">Todos</string>
    <string name="weather">S. Atmosfericos</string>
    <string name="noise">S. Ruido</string>

    <string name="title_window">Ventana popup</string>
    <string name="text_boton_window">Boton ventana</string>
    <string name="ver_mapa">Ver Mapa</string>
    <string name="ver_mas">Ver más</string>
    <string name="favorito">Favorito</string>
    <string name="boton_favoritos">Favoritos</string>
    <string name="iramapa">Ir a mapa</string>
    <string name="editMode">Modo editar</string>
    <string name="ver_alarmas">Ver alarmas</string>

</resources>
