<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sensorsantander.VistaMapa">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="Refresh"
        android:icon="@mipmap/refreshicon"
        app:showAsAction="always" />

    <item android:id="@+id/todos"
        android:title="@string/todos"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/weather"
        android:title="@string/weather"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/noise"
        android:title="@string/noise"
        android:orderInCategory="3"
        app:showAsAction="never" />

</menu>