<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/layout_datos"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imagen_sensor_detalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@mipmap/sensoricon" />

    <TextView
        android:id="@+id/id_detalle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagen_sensor_detalle"
        android:layout_alignParentLeft="true"
        android:text="@string/id_detalle" />
    <TextView
        android:id="@+id/id_detalle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagen_sensor_detalle"
        android:layout_toRightOf="@+id/id_detalle_label"
        android:layout_toEndOf="@+id/id_detalle_label"
        android:text="@string/id_detalle_valor" />


    <TextView
        android:id="@+id/temp_detalle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_detalle_label"
        android:layout_alignParentLeft="true"
        android:text="@string/temp_detalle" />
    <TextView
        android:id="@+id/temp_detalle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_detalle_text"
        android:layout_toRightOf="@+id/temp_detalle_label"
        android:layout_toEndOf="@+id/temp_detalle_label"
        android:text="@string/temp_detalle_valor" />


    <TextView
        android:id="@+id/noise_detalle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_detalle_label"
        android:layout_alignParentLeft="true"
        android:text="@string/noise_detalle" />
    <TextView
        android:id="@+id/noise_detalle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_detalle_text"
        android:layout_toRightOf="@+id/noise_detalle_label"
        android:layout_toEndOf="@+id/noise_detalle_label"
        android:text="@string/noise_detalle_valor" />


    <TextView
        android:id="@+id/light_detalle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noise_detalle_label"
        android:layout_alignParentLeft="true"
        android:text="@string/light_detalle" />
    <TextView
        android:id="@+id/light_detalle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noise_detalle_text"
        android:layout_toRightOf="@+id/light_detalle_label"
        android:layout_toEndOf="@+id/light_detalle_label"
        android:text="@string/light_detalle_valor" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_botones"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_datos"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/texto_seccion_favoritos"
            android:text="Selecciona el grupo al que añadir este sensor:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/selector_grupo"
            android:background="@drawable/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/boton_add_favoritos"
            android:text="Añadir a favoritos"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>