<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sensorsantander.VistaMapa">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="Home"
        android:icon="@mipmap/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/filtro_fecha"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_date_range_24"
        android:title="Filtrar fecha"
        app:showAsAction="always"
        />

    <item android:id="@+id/todos"
        android:title="@string/todos"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/weather"
        android:title="@string/weather"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/noise"
        android:title="@string/noise"
        android:orderInCategory="3"
        app:showAsAction="never" />

</menu>